# pyfuscator

./: .gitignore  .pylintrc  LICENSE  README.md  pyfuscator.py  pyproject.toml  python-obfuscator.py  requirements.txt
src/pyfuscator/: __init__.py  __main__.py  cli.py  config.py  constants.py  log_utils.py
src/pyfuscator/core/: __init__.py  globals.py  methods.py  obfuscator.py  transformer.py  utils.py
src/pyfuscator/encryption/: __init__.py  methods.py
src/pyfuscator/transformers/: __init__.py  junk.py
src/pyfuscator/transformers/powershell/: __init__.py  ads.py  base64.py  concat.py  coordinator.py  dotnet.py  encoding.py  encryption.py  identifiers.py  junk.py  lower_entropy.py  remove_comments.py  script_encryptor.py  securestring.py  strings.py
src/pyfuscator/transformers/python/: __init__.py  coordinator.py  functions.py  identifiers.py  imports.py  junk.py  strings.py
